@@ -17,10 +17,7 @@
 
 		<MARK_FOLLOWING TYPE="LITERAL2">#</MARK_FOLLOWING>
 		
-		<SPAN TYPE="MARKUP">
-			<BEGIN>@(</BEGIN>
-			<END>)</END>
-		</SPAN>
+		<SEQ TYPE="MARKUP">@</SEQ>
 		
 		<SPAN TYPE="LITERAL1">
 			<BEGIN>'</BEGIN>
